--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,9 +1,11 @@
 // Colors
-$off-black: #20222b;
 $off-white: #a5afd5;
+$purple: #8357c5;
+$off-black: #20222b;
 $dark-blue: #333745;
 
 // Spacing
+$s-size: 1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
