Add styles for options widget

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,5 +1,7 @@
 // Colors
 $off-white: #a5afd5;
+$blue: #3c4251;
+$light-blue: #464b5e;
 $purple: #8357c5;
 $off-black: #20222b;
 $dark-blue: #333745;
