--- a/src/styles/components/_add-option.scss
+++ b/src/styles/components/_add-option.scss
@@ -1,5 +1,6 @@
 .add-option {
   display: flex;
+  flex-direction: column;
   padding: $s-size;
 }
 
@@ -8,7 +9,7 @@
   border: none;
   border-bottom: 0.3rem solid darken($dark-blue, 10%);
   color: $off-white;
-  margin-right: $s-size;
+  margin: 0 0 $s-size 0;
   padding: $s-size;
   flex-grow: 1;
 }
@@ -18,4 +19,14 @@
   font-style: italic;
   margin: $m-size 0 0 0;
   padding: 0 $m-size;
+}
+
+@media (min-width: $desktop-breakpoint) {
+  .add-option {
+    flex-direction: row;
+  }
+
+  .add-option__input {
+    margin: 0 $s-size 0 0;
+  }
 }
